--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>About - My First Website</title>
+  <title>About - heer-desai</title>
   <!--
     TODO: Change the title to match your website name.
   -->
